--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,10 +3,13 @@
 
 # Visit https://goreleaser.com for documentation on how to customize this
 # behavior.
+version: 2
 before:
   hooks:
     # this is just an example and not a requirement for provider building/publishing
     - go mod tidy
+    - go install honnef.co/go/tools/cmd/staticcheck@latest
+    - staticcheck ./...
 builds:
   - env:
       # goreleaser does not work with CGO, it could also complicate
